--- a/frontend/quote-gen-ui/package.json
+++ b/frontend/quote-gen-ui/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "node-sass": "^7.0.0",
+    "sass-loader": "12.4.0"
+
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
