--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,35 @@
 version: '3.7'
 services:
   postgresql:
-    image: postgres
+    image: "postgres:14"
+    container_name: postgresql
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - "5444:5444"
     environment:
-      - POSTGRES_DB = phrases
-      - POSTGRES_USER = postgres
-      - POSTGRES_PASSWORD = root
+      - POSTGRES_DB=phrases
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=root
   backend:
     build: ./backend
+    container_name: backend
     ports:
-      - "8080:8080"
+      - "8081:8081"
+    environment:
+      - DB_SERVER=postgresql
+      - POSTGRES_DB=phrases
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=root
     depends_on:
       - postgresql
   frontend:
     build: ./frontend/quote-gen-ui
     ports:
-      - "80:80"
+      - "8080:8080"
+    depends_on:
+      - backend
+
+volumes:
+  postgres-data:
+    driver: local
