--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
 FROM adoptopenjdk/openjdk11:jdk-11.0.5_10-alpine
-ADD out/artifacts/QuotesContainerization_jar/QuotesContainerization.jar QuotesContainerization.jar
+COPY . .
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "QuotesContainerization.jar"]
+RUN chmod +x mvnw
+ENTRYPOINT ["./mvnw", "spring-boot:run"]
