--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.url=jdbc:postgresql://${DB_SERVER}/${POSTGRES_DB}
+spring.datasource.url=jdbc:postgresql://${DB_SERVER}:${DB_PORT}/${POSTGRES_DB}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/phrases
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
