--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
-      - "5444:5444"
+      - "5432:5432"
     environment:
       - POSTGRES_DB=phrases
       - POSTGRES_USER=postgres
@@ -18,13 +18,14 @@ services:
       - "8081:8081"
     environment:
       - DB_SERVER=postgresql
+      - DB_PORT=5432
       - POSTGRES_DB=phrases
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=root
     depends_on:
       - postgresql
   frontend:
-    build: ./frontend/quote-gen-ui
+    build: ./frontend/frontend
     ports:
       - "8080:8080"
     depends_on:
